--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@ h6 {
   transition: all 0.4s;
   outline: none !important;
   background-color: #149ddd;
+  
   color: #fff;
   width: 40px;
   height: 40px;
@@ -243,6 +244,7 @@ h6 {
   height: 100vh;
   background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 #hero:before {
@@ -1103,4 +1105,22 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.popup-content {
+  background-color: #fff;
+  padding: 20px;
 }
