--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,38 @@ h6 {
   opacity: 1;
 }
 
+
+.back-to-left {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  background: #149ddd;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.4s;
+}
+
+.back-to-left i {
+  font-size: 28px;
+  color: #fff;
+  line-height: 0;
+}
+
+.back-to-left:hover {
+  background: #2eafec;
+  color: #fff;
+}
+
+.back-to-left.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
